--- a/class-01-jquery-and-the-dom/pair-assignment/starter-code/index.html
+++ b/class-01-jquery-and-the-dom/pair-assignment/starter-code/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="vendor/styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/modules.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
   </head>
   <body>
     <main>
@@ -42,5 +43,8 @@
     </footer>
 
     <!-- // TODO: Include any/all needed script tags -->
+    <script src="scripts/blogArticles.js"></script>
+    <script src="scripts/article.js"></script>
+
   </body>
 </html>
