update CSS styles, fixed filtering dropdown

--- a/class-02-jquery-and-events/pair-assignment/lillian-jonathanD/index.html
+++ b/class-02-jquery-and-events/pair-assignment/lillian-jonathanD/index.html
@@ -17,7 +17,7 @@
     </header>
     <nav class="main-nav">
       <ul>
-        <!-- TODO: DONE.  Use one of the icons from the available set for each
+        <!-- DONE: DONE.  Use one of the icons from the available set for each
         of these nav items... -->
         <li class="tab icon-home3" data-content="articles"><a href="#"> Home</a></li>
         <li class="tab icon-happy2" data-content="about"><a href="#"> About</a></li>
@@ -75,6 +75,6 @@
     <script src="scripts/blogArticles.js"></script>
     <script src="scripts/article.js"></script>
     <script src="scripts/articleView.js"></script>
-    <!-- TODO: Link up the new js file that will manage the article "View". DONE -->
+    <!-- DONE: Link up the new js file that will manage the article "View". DONE -->
   </body>
 </html>
