--- a/class-03-responsive-mobile-first/pair-assignment/lillian-jonathanD/index.html
+++ b/class-03-responsive-mobile-first/pair-assignment/lillian-jonathanD/index.html
@@ -34,7 +34,7 @@
     </header>
     <main>
       <section id="articles" class="tab-content">
-        <div>
+        <div class="filterStyle">
           <ul id="filters">
             <li>
               <select id="author-filter">
@@ -67,7 +67,7 @@
           Welcome to my Blog
         </header>
         <section>
-          <h1>Some of my intrests:</h1>
+          <h1>Some of my interests:</h1>
           <ul>
             <li>Coding</li>
             <li>Sharing what I've learned</li>
