--- a/class-04-templates/pair-assignment/starter-code/index.html
+++ b/class-04-templates/pair-assignment/starter-code/index.html
@@ -10,8 +10,21 @@
     <link rel="stylesheet" href="styles/layout.css">
     <link rel="stylesheet" href="styles/modules.css">
 
+
+    <script id="blogArticles" type="text/x-handlebars-template">
+      {{#each articles}}
+      <section class="">{{title}}</section>
+      <section class="">{{category}}</section>
+      <section class="">{{{authorUrl}}}</section>
+      <section class="">{{publishedOn}}</section>
+      <section class="">{{{body}}}</section>
+      <section class="">{{pubDifference}}</section>
+      <hr />
+      {{/each}}
+    </script>
+
     <!--
-      TODO: Add a script tag to hold the Handlebars template.
+      DONE: Add a script tag to hold the Handlebars template.
         - Be sure to give it a meaningful id attribute.
         - Move your old template structure to here.
         - Insert placeholder keys.
@@ -73,7 +86,8 @@
     </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <!-- TODO: Include Handlebars.JS from a CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.js"></script>
+    <!-- DONE: Include Handlebars.JS from a CDN -->
     <script src="scripts/blogArticles.js"></script>
     <script src="scripts/article.js"></script>
     <script src="scripts/articleView.js"></script>
